# Life_expectancy

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/processed/: X_train.csv  y_train.csv
life_expectancy/: __init__.py  dataset.py
life_expectancy/modeling/: predict.py  train.py
